# api-key-manager

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  crypto.rs  lib.rs  main.rs  password.rs  recovery.rs  settings.rs  vault.rs
src/components/: KeyCard.tsx  KeyList.tsx  KeyModal.tsx  LockScreen.tsx  PasswordInput.tsx  RecoveryModal.tsx  SearchBar.tsx  Settings.tsx
src/styles/: global.css
