[package]
name = "api-key-manager"
version = "0.1.0"
description = "Secure local API key manager"
authors = ["you"]
license = "MIT"
edition = "2021"

[lib]
name = "api_key_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
arboard = "3"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
